--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </div>
         </nav>
     </header>
+
+    <nav id="categories" class="py-3 flex justify-center gap-5">
+
+    </nav>
+
+    <script src="script/video.js"></script>
 </body>
 
 </html>
